Fix section spacing css class, using markup as same as block core/group render

--- a/src/postcss/legacy/global/sections.css
+++ b/src/postcss/legacy/global/sections.css
@@ -2,6 +2,7 @@
 	margin-top: var(--section-space);
 }
 
+.section.has-background,
 .section-bg {
 	padding: var(--section-space) 0;
 
